<resources>
    <string name="action_settings">Settings</string>
    <string name="home_btn_choose_country">Choose country</string>
    <string name="home_pop_up_title_choose_country">Choose country</string>
    <string name="server_btn_connect">Connect</string>
    <string name="server_btn_disconnect">Disconnect</string>
    <string name="server_txt_ping">Ping:</string>
    <string name="server_txt_sessions">Sessions:</string>
    <string name="server_txt_speed">Speed:</string>
    <string name="server_txt_city">City:</string>
    <string name="server_error_loading_profile">Error loading profile</string>
    <string name="server_txt_status">Status connection:</string>
    <string name="server_not_connected">Not connected</string>
    <string name="server_list_more">Details</string>
    <string name="mbps">Mbps</string>
    <string name="ms">ms</string>
    <string name="loading_text">Loading...</string>
    <string name="downloading_csv_text">Downloading servers list...</string>
    <string name="parsing_csv_text">Parsing servers list...</string>
    <string name="csv_file_error">Problem with a file reading...</string>
    <string name="csv_file_error_parsing">Problem with a file parsing...</string>
    <string name="network_error">Network error...</string>
    <string name="successfully_loaded">Successfully loaded</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh servers list</string>
    <string name="action_share">Share</string>
    <string name="ok">Ok</string>
    <string name="network_error_message">Internet is not available, reconnect network and try again.</string>
    <string name="blocking_ads">Turn on ads filtering</string>
    <string name="more_servers">Get more servers</string>
    <string name="feature_not_available">This feature temporarily is not available</string>
    <string name="feature_not_available_without_perm">Without account information this feature is not available</string>
    <string name="unblock">Ads filtering</string>
    <string name="what_is_my_ip">What is my IP?</string>
    <string name="action_current_connection">Current connection</string>
    <string name="random_connection">Quick connection</string>
    <string name="total_servers">%1$d servers available in the local database now</string>
    <string name="loading_additional_servers">The loading of additional servers</string>
    <string name="current_servers_list">Current servers list</string>
    <string name="you_have_servers"><b>You have servers:</b></string>
    <string name="info_basic">%1$d basic</string>
    <string name="info_additional">%1$d additional</string>
    <string name="connect_on_start">Connect on start</string>
    <string name="connect_on_start_summary">Connect when application is started</string>
    <string name="choose_country_priority">Choose country priority</string>
    <string name="choose_country_priority_summary">If not enabled then use random connection</string>
    <string name="choose_country">Choose country</string>
    <string name="error_random_country">Server with priority country %1$s is not available</string>
    <string name="success_pop_up_title"><b>You are successfuly connected!
        \n Let\'s try it out?</b></string>
    <string name="open_playmarket">Open PlayMarket</string>
    <string name="open_browser">Open browser</string>
    <string name="show_my_desktop">Show my desktop</string>
    <string name="stay_to_try_something_else">Stay to try something else</string>
    <string name="automatic_switching">Automatic switching</string>
    <string name="automatic_switching_category">Automatic switching</string>
    <string name="automatic_switching_set_seconds">Set seconds</string>
    <string name="automatic_switching_summary">Automatic switching to the same country server after some seconds,
        if this connecting impossible.
    </string>
    <string name="choose_country_priority_category">Country priority</string>
    <string name="connect_on_start_category">Auto start on boot</string>
    <string name="try_another_server_text">Do you want try another server?</string>
    <string name="try_another_server_ok">Yes</string>
    <string name="try_another_server_no">No</string>
    <string name="traffic_in">Downloaded: %1$s</string>
    <string name="traffic_out">Uploaded: %1$s</string>
    <string name="traffic_totally"><b>Totally through the application</b></string>
    <string name="rating_title"><b>Thanks for using Easy VPN Free!</b></string>
    <string name="rating_sure">Sure</string>
    <string name="rating_not">Not really</string>
    <string name="rating_text">We are trying to make the app better!
        \nWould you like to show your support
        \nby rating us?
    </string>
    <string name="share_text">
        Easy VPN Free! Open source, Unlimited and 100% Free!
        \nMore than 22 countries to connect and unblock all blocked websites.
        \n\nhttps://play.google.com/store/apps/details?id=com.vasilkoff.easyvpnfree
    </string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_delete">Delete</string>
    <string name="note_title"><b>Note</b></string>
    <string name="note_text">The list of the servers you will find
        in this application are from VPN Gate and are
        provided by <b>volunteers around the world</b>.
    </string>
    <string name="note_link">\nYou can provide your own computer as a VPN server to join this experiment.</string>
</resources>
