<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/automatic_switching_category">
        <CheckBoxPreference
            android:title="@string/automatic_switching"
            android:defaultValue="true"
            android:summary="@string/automatic_switching_summary"
            android:key="automaticSwitching"/>
        <com.vasilkoff.easyvpnfree.util.NumberPickerPreference
            android:dependency="automaticSwitching"
            android:key="automaticSwitchingSeconds"
            android:title="@string/automatic_switching_set_seconds"
            android:defaultValue="40" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/connect_on_start_category">
        <CheckBoxPreference
            android:title="@string/connect_on_start"
            android:defaultValue="false"
            android:summary="@string/connect_on_start_summary"
            android:key="connectOnStart"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="countryPriorityCategory"
        android:title="@string/choose_country_priority_category">
        <CheckBoxPreference
            android:title="@string/choose_country_priority"
            android:defaultValue="false"
            android:summary="@string/choose_country_priority_summary"
            android:key="countryPriority"/>
        <ListPreference
            android:dependency="countryPriority"
            android:title="@string/choose_country"
            android:key="selectedCountry"/>
    </PreferenceCategory>
</PreferenceScreen>