<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/info_servers_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textColor="@color/buttonBg"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_text"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/noteLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_link"
            android:textSize="16sp"
            android:textColor="@color/buttonBg"/>
    </LinearLayout>
</RelativeLayout>